definde css varriables, navbar for desktop screen added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Trustworthy App</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <meta name="author" content="Network Solution" />
+    <meta name="description" content="Trustworthy App" />
+    <!-- importing Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="layout-container">
+      <aside class="side-bar">
+        <nav class="side-nav">
+          <div class="logo">
+            <span class="svg-logo">
+              <svg
+                width="28"
+                height="38"
+                viewBox="0 0 48 53"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M48.1036 41.1238H23.8375L29.9417 47.2198L23.1592 53.9931L0 31.0908H48.1036V41.1238Z"
+                  fill="white"
+                />
+                <path
+                  d="M48.4752 22.9023H0.371582V12.8693H24.6377L18.5335 6.77334L25.316 0L48.4752 22.9023Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+            <span class="logo-text">Etran</span>
+          </div>
+
+          <a href="" class="get-started">Get Started</a>
+        </nav>
+
+        <div class="main-heading-container">
+          <h1>
+            Money Transfers <br />
+            Made <span>Simple</span>
+          </h1>
+          <p>No personal credit checks or founder guarantee.</p>
+        </div>
+      </aside>
+
+      <main class="main-container"></main>
+    </div>
+  </body>
 </html>
