Modified the aside section to add the main headin and buttom navs
after adding all the neccessary components on the aside, also made it responsive on mobile screen and tablet devices

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <div class="layout-container">
@@ -51,6 +56,45 @@
           </h1>
           <p>No personal credit checks or founder guarantee.</p>
         </div>
+
+        <div class="offerings-container">
+          <h3>Our offerings</h3>
+
+          <div class="offerings">
+            <div class="offering">
+              <img src="./icons/electric-charge-icon.svg" alt="" />
+              <p>
+                Instant <br />
+                Productivity
+              </p>
+            </div>
+
+            <div class="offering">
+              <img src="./icons/world-icon.svg" alt="world icon" />
+              <p>
+                Expense <br />
+                Management
+              </p>
+            </div>
+
+            <div class="offering">
+              <img src="./icons/technology-Icons.png" alt="" />
+              <p>
+                Advanced <br />
+                Technology
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <nav class="sidebar-bottom-nav">
+          <ul class="sidebar-bottom-links">
+            <li class="sidebar-bottom-link"><a href="#contact">Contact</a></li>
+            <li><a href="#social">Social</a></li>
+            <li><a href="#address">Address</a></li>
+            <li><a href="#legal-terms">Legal Terms</a></li>
+          </ul>
+        </nav>
       </aside>
 
       <main class="main-container"></main>
