--- a/index.html
+++ b/index.html
@@ -97,7 +97,214 @@
         </nav>
       </aside>
 
-      <main class="main-container"></main>
+      <main class="main-container">
+        <section class="hero-section">
+          <div class="hero-screen-container">
+            <div class="hero-screen">
+              <div class="" id="internet-card">
+                <span class="span">
+                  <svg
+                    width="100"
+                    height="100"
+                    viewBox="0 0 100 100"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle
+                      cx="28"
+                      cy="28"
+                      r="14"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                    />
+                    <path
+                      d="M28 20V36M31 23H26.5C25.1 23 24 24.1 24 25.5C24 26.9 25.1 28 26.5 28H29.5C30.9 28 32 29.1 32 30.5C32 31.9 30.9 33 29.5 33H25"
+                      stroke="#5D6341"
+                      stroke-width="2.5"
+                      stroke-linecap="round"
+                    />
+
+                    <path
+                      d="M15 88H85"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                      stroke-linecap="round"
+                    />
+
+                    <rect
+                      x="18"
+                      y="66"
+                      width="10"
+                      height="22"
+                      rx="1"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                    />
+
+                    <rect
+                      x="34"
+                      y="55"
+                      width="10"
+                      height="33"
+                      rx="1"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                    />
+
+                    <rect
+                      x="50"
+                      y="24"
+                      width="10"
+                      height="64"
+                      rx="1"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                    />
+
+                    <rect
+                      x="66"
+                      y="42"
+                      width="10"
+                      height="46"
+                      rx="1"
+                      stroke="#5D6341"
+                      stroke-width="3"
+                    />
+                  </svg>
+                </span>
+                <p><a href="">Interest Earned!</a></p>
+              </div>
+
+              <div class="" id="money-card">
+                <span class="span">
+                  <svg
+                    width="100"
+                    height="100"
+                    viewBox="0 0 100 100"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M20 52L40 72L80 28"
+                      stroke="#4B5320"
+                      stroke-width="6"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </span>
+                <p><a href="">Money Sent!</a></p>
+              </div>
+
+              <div class="" id="payment-card">
+                <span class="span">
+                  <svg
+                    width="100"
+                    height="100"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M12 7L16 3L19 7"
+                      stroke="#556B2F"
+                      stroke-width="1"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M8 10L13 5"
+                      stroke="#556B2F"
+                      stroke-width="1"
+                      stroke-linecap="round"
+                    />
+
+                    <path
+                      d="M3 10V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V11C21 9.89543 20.1046 9 19 9H5C3.89543 9 3 9.89543 3 11"
+                      stroke="#556B2F"
+                      stroke-width="1"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M3 14H19"
+                      stroke="#556B2F"
+                      stroke-width="1"
+                      stroke-linecap="round"
+                    />
+
+                    <rect
+                      x="18"
+                      y="13"
+                      width="4"
+                      height="4"
+                      rx="1"
+                      stroke="#556B2F"
+                      stroke-width="1"
+                      fill="white"
+                    />
+                  </svg>
+                </span>
+                <p><a href="">Payment record!</a></p>
+              </div>
+            </div>
+
+            <p>
+              We escalate transfer efficiency <br />
+              and productivity
+            </p>
+          </div>
+          <nav class="hero-nav">
+            <ul class="hero-links">
+              <li class="hero-link">
+                <span><img src="./icons/Layer_1-1.svg" alt="" /></span>
+                <a href="">Blooming</a>
+              </li>
+
+              <li class="hero-link">
+                <span><img src="./icons/Group 2147220594-1.svg" alt="" /></span>
+                <a href="">BuildRight</a>
+              </li>
+
+              <li class="hero-link">
+                <span>
+                  <img src="./icons/Group 2147220697-1.svg" alt=""
+                /></span>
+                <a href="">Flowbot</a>
+              </li>
+
+              <li class="hero-link">
+                <span><img src="./icons/Subtract-1.png" alt="" /></span>
+                <a href="">EXPOR</a>
+              </li>
+
+              <li class="hero-link">
+                <span
+                  ><img src="./icons/Vector 2669 (Stroke)-1.svg" alt=""
+                /></span>
+                <a href="">Redo</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+        <hr />
+        <section class="get-more-done">
+          <div class="get-more-done-header">
+            <h2>Get more done in a week</h2>
+            <p>
+              Maximize your productivity with smarter tools designed to
+              streamline your workflow to automate tasks, stay organized
+            </p>
+          </div>
+
+          <div class="get-more">
+            <div class="get-more-card"></div>
+            <div class="get-more-card"></div>
+            <div class="get-more-card"></div>
+            <div class="get-more-card"></div>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
