Added get-more section, and polished to be responsive on all devices

--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             </ul>
           </nav>
         </section>
+
         <hr />
+
         <section class="get-more-done">
           <div class="get-more-done-header">
             <h2>Get more done in a week</h2>
@@ -298,12 +300,26 @@
           </div>
 
           <div class="get-more">
-            <div class="get-more-card"></div>
-            <div class="get-more-card"></div>
-            <div class="get-more-card"></div>
-            <div class="get-more-card"></div>
+            <div class="get-more-card double-prodctivity">
+              <img src="./images/2x-1.svg" alt="" />
+              <p class="get-more-paragraph">Double Your Productivity</p>
+            </div>
+            <div class="get-more-card">
+              <img src="./images/get-more-graph.svg" alt="" />
+              <p class="get-more-paragraph">Efficiency Increase Per Transfer</p>
+            </div>
+            <div class="get-more-card">
+              <img src="./images/centralized-finance.svg" alt="" />
+              <p class="get-more-paragraph">Centralize Your Finances</p>
+            </div>
+            <div class="get-more-card">
+              <img src="./images/more-activity.svg" alt="" />
+              <p class="get-more-paragraph">More Activity</p>
+            </div>
           </div>
         </section>
+
+        <hr />
       </main>
     </div>
   </body>
