Added-reliable-apps section, also modified this section to be responsive on all screens

--- a/index.html
+++ b/index.html
@@ -320,6 +320,29 @@
         </section>
 
         <hr />
+
+        <section class="reliable-apps">
+          <h2>The Most Reliable App</h2>
+          <div class="reliable-apps-photos">
+            <figure>
+              <img src="./images/atm.svg" alt="" />
+              <figcaption>
+                Scale Your Team, Not Your Card Expenses Issue virtual and
+                physical cards at no additional cost to support teams of any
+                size.
+              </figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/write-up.svg" alt="" />
+              <figcaption>
+                Effortless Paper Tracking, Mobile Convenience Get precise
+                control—at scale—with the ability to lock any card and restrict
+                any type of spend.
+              </figcaption>
+            </figure>
+          </div>
+        </section>
       </main>
     </div>
   </body>
