created and modified software-class section, also made it responsive

--- a/index.html
+++ b/index.html
@@ -343,6 +343,52 @@
             </figure>
           </div>
         </section>
+
+        <hr />
+
+        <section class="picture">
+          <img src="./images/him2.svg" alt="" />
+        </section>
+
+        <hr />
+
+        <section class="software-class-section">
+          <div class="sofware-class-header">
+            <h2>First class software</h2>
+            <p>
+              Get real-time insights, seamless transactions, and advanced tools
+              to manage your wealth effortlessly.
+            </p>
+          </div>
+
+          <div class="software-sclases">
+            <figure software-class-card>
+              <img src="./images/storage.svg" alt="" />
+              <figcaption>
+                <p>Safe Storage</p>
+              </figcaption>
+            </figure>
+
+            <figure software-class-card>
+              <img src="./images/secure.svg" alt="" />
+              <figcaption>
+                <p>Secure</p>
+              </figcaption>
+            </figure>
+            <figure software-class-card>
+              <img src="./images/interest.svg" alt="" />
+              <figcaption>
+                <p>Earn Interest</p>
+              </figcaption>
+            </figure>
+            <figure software-class-card>
+              <img src="./images/plans.svg" alt="" />
+              <figcaption>
+                <p>Family Plans</p>
+              </figcaption>
+            </figure>
+          </div>
+        </section>
       </main>
     </div>
   </body>
