added the download-section

--- a/index.html
+++ b/index.html
@@ -389,6 +389,17 @@
             </figure>
           </div>
         </section>
+
+        <hr />
+
+        <section class=">
+          <h2>
+            Download Etran and <br />
+            manage everything <br />
+            from your phone.
+          </h2>
+          <a href="" class="get-started">Get Started</a>
+        </section>
       </main>
     </div>
   </body>
