added foter section

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
         <hr />
 
-        <section class=">
+        <section class="download-section">
           <h2>
             Download Etran and <br />
             manage everything <br />
@@ -400,6 +400,31 @@
           </h2>
           <a href="" class="get-started">Get Started</a>
         </section>
+        <footer class="footer">
+          <div>
+            <img src="./icons/Logo-1.svg" alt="logo" />
+            <nav class="socials">
+              <h3>Contacts</h3>
+              <ul class="social-links">
+                <li>
+                  <a href="mailto" class="social-link">hello@figma.com</a>
+                </li>
+                <li><a href="" class="social-link">Instagram</a></li>
+                <li><a href="" class="social-link">X</a></li>
+                <li><a href="" class="social-link">LinkedIn</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="etran">
+            <img src="./icons/Etran-1.svg" alt="seonding-logo" />
+            <nav class="terms-conditions">
+              <ul>
+                <li><a href="">Terms & Conditions</a></li>
+                <li><a href="">Privacy</a></li>
+              </ul>
+            </nav>
+          </div>
+        </footer>
       </main>
     </div>
   </body>
